# sutra

./: .gitignore  .gitmodules  AGENTS.md  README.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 6f8b1f0b6c2a_add_shared_workspace_item_content_fields.py  8e9091b03d62_initial_schema.py  ab4e1c9d2f73_add_poller_leases.py  c13c2a4e5d10_add_team_tasks.py  d9d22635b1d4_add_runtime_host_fields_and_jobs.py  dcda719dda1c_baseline_schema.py  e7db1f1b2a77_add_team_task_claim_fields.py  f1c4d3e9a8b6_add_team_task_updates.py
backend/sutra_backend/: __init__.py  config.py  db.py  enums.py  main.py  models.py
backend/sutra_backend/api/: __init__.py  agents.py  auth_routes.py  conversations.py  github.py  github_integration.py  health.py  jobs.py  routes.py  runtime_routes.py  secrets.py  system.py  tasks.py  teams.py
backend/sutra_backend/auth/: dependencies.py  firebase.py
backend/sutra_backend/runtime/: __init__.py  client.py  env_policy.py  errors.py  firecracker_host.py  honcho.py  (+3 more)
backend/tests/: conftest.py  test_agent_responses.py  test_app.py  test_auth.py  test_catalog.py  test_conversations_api.py  test_firecracker_host.py  test_firecracker_host_service.py  test_github_auth.py  test_github_export_api.py  test_inbox_poller.py  test_jobs_api.py  test_models.py  test_runtime_api.py  test_runtime_client.py  test_runtime_env_policy.py  test_runtime_provisioning.py  test_secret_injection.py  test_secrets_api.py  test_settings.py  test_system_api.py  test_team_runtime_api.py
(+76 files in other folders)
