[project]
name = "sutra-backend"
version = "0.1.0"
description = "FastAPI control plane for Sutra"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.1,<2.0.0",
  "fastapi>=0.115.12,<1.0.0",
  "firebase-admin>=7.1.0,<8.0.0",
  "httpx>=0.28.1,<1.0.0",
  "pydantic-settings>=2.8.1,<3.0.0",
  "psycopg[binary]>=3.2.6,<4.0.0",
  "sqlmodel>=0.0.24,<0.1.0",
  "uvicorn>=0.34.0,<1.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.5,<9.0.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sutra_backend"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["."]
testpaths = ["tests"]
